--- a/src/components/Semantic/Semantic.css
+++ b/src/components/Semantic/Semantic.css
@@ -1,66 +1,191 @@
-.FirstPage{
+.FirstPageBr{
     cursor:pointer;
     color:black;
     position: absolute  ; 
-     top:30%;
+    top:30%;
     left: 40%;
     transform: translate(-30%, -30%);
-
+    width: fit-content ;
     /* margin: auto;    
     display: block;
     position: relative !important;
     z-index: -1; */
+    align-items: center;
+
+   
 }
-.menu-item{
-  color: white;
+
+.FirstPageMb{
+  cursor:pointer;
+  color:black;
+  position: absolute  ; 
+  top: 40%;
+  left: 35%;
+  transform: translate(-35%, -40%);
+  width: fit-content ;
+
 }
-  .FullResume{
-    background-color : black;
-    /* height: 130vh; */
-    position: absolute;
-    padding: 0;
-    margin: 0;
+.galsImg{
+  position: absolute  ; 
+  opacity: 0.44;
+  cursor:pointer;
+
+}
+.galsImgMb{
+  position: absolute  ; 
+  opacity: 0.7;
+  left: 30%;
+  cursor:pointer;
+ 
+}
+.menu-item1{
+  color:white;
+  cursor:pointer;
+  top:9%;
+  margin: 5px;
+  position: relative;
+  /* display: flex; */
+  text-align: center;
+}
+.menu-item1:hover
+{
+  color:black;
+}
+
+.menu-item2{
+  color:white;
+  cursor:pointer;
+  top:14%;
+
+  text-align: center;
+  margin: 5px;
+  position: relative;
+  display: flex;
+}
+.menu-item2:hover
+{
+  color:black;
+}
+.menu-item3{
+  color:white;
+  cursor:pointer;
+  top:19%;
+  position: fixed ;
+  text-align: center;
+  margin: 5px;
+  position: relative;
+  display: flex;
+}
+.menu-item3:hover
+{
+  color:black;
+}
+.menu-item4{
+  color:white;
+  cursor:pointer;
+  top:24%;
+  position: fixed ;
+  text-align: center;
+  margin: 5px;
+  position: relative;
+  display: flex;
+}
+.menu-item4:hover
+{
+  color:black;
+}
+
+.menu-item5{
+  color:white;
+  cursor:pointer;
+  top:29%;
+  position: fixed ;
+  text-align: center;
+  margin: 5px;
+  position: relative;
+  display: flex;
+}
+.menu-item5:hover
+{
+  color:black;
+}
+
+.menu-item6{
+  color:white;
+  cursor:pointer;
+  top:50%;
+  position: fixed ;
+  text-align: center;
+  margin: 5px;
+  position: relative;
+  display: flex;
+  font-size: 11px;
+}
+.menu-item6:hover
+{
+  color:black;
+}
+
+
+  .FullResumeEnglishBrowser{
+    cursor:pointer;
+    position: absolute ;
     top:0;
-    left:0;
-    /* top:40vh;
-    left: 40vh;
-    transform: translate(-40vh, -30vh);  */
-    /* top:40%;
-    left: 40%;
-    transform: translate(-40%, -30%); */
+    left:50%;
+    transform: translate(-50vh, 5vh);  
   }
+  .FullResumeEnglishMobile{
+    cursor:pointer;
+    position: absolute ;
+    top:5%;
+    left:10%;
+    /* transform: translate(-50vh, 5vh);   */
+  }
+
+  .FullResumeHebrewMobile{
+    cursor:pointer;
+    position: absolute ;
+    top:5%;
+    left:20%;
+    transform: translate(-4vh, 5vh);  
+  
+  }
+  
+  .FullResumeHebrewBrowser{
+    cursor:pointer;
+    position: absolute ;
+    top:0;
+    left:50%;
+    transform: translate(-50vh, 5vh);  
+  }
+
   .About{
+    cursor:pointer;
     position: fixed;
-    /* height: 100vh; */
-    background-color : black;
     top:30%;
-    left: 40%;
-    transform: translate(-30%, -30%);
+    left: 50%;
+    transform: translate(-50%, -30%);
+    width: fit-content ;
     /* font-size: 100px;
     size: 100px; */
     }
+    .AboutMB{
+      cursor:pointer;
+      position: fixed;
+      top:30%;
+      left: 40%;
+      transform: translate(-40%, -30%);
+      width: fit-content ;
+      /* font-size: 100px;
+      size: 100px; */
+      }
 
-
-  /* @media screen and (min-width: 760px) {
-    .About {
-      font-size: 100px;
-    }
-  } */
-  /* @media screen and (min-width: 768px) {
-    .About {
-      font-size: 40px;
-    }
-  } */
-
-
-  .WorkEx{
-    /* height:auto; */
-  }
 
   .ParticlesCanvas{
+    cursor:pointer;
     width:100%;
     min-height: 150%;
-    
+    max-height: 500%;
      position: absolute;
     z-index: -1;
     top: 0;
@@ -75,14 +200,24 @@
   .BottomBar{
     width: 100%;
     color:black;
-    position:fixed;
+    position:fixed !important;
     bottom:0;
+    cursor:pointer;
+
   }
+.BottomMenue{
+  cursor:pointer;
+ justify-content: center;
+  background-color: #373a47;
+  opacity: 0.9;
+  position:fixed !important;
+
+}
 
   .Icons{
     margin-right: 20px;
     padding: 0;
-     display: inline;
+    display: inline;
   
   }
 
@@ -101,4 +236,42 @@
     opacity: 1;
   }
   
-  
+  .LanguageDropdown{
+    /* display: inline; */
+    position: absolute; 
+    cursor:pointer;
+    opacity: 0.7;
+
+    background-color: black;
+    /* padding: 0;
+    margin: 0;
+    top:0; */
+    /* left:0; */
+  }
+
+
+  /*for skills list */
+  h3 {
+    list-style: none; /* Remove default bullets */
+  }
+   li::before {
+    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+    color: #0099cc; /* Change the color */
+    font-weight: bold; /* If you want it to be bold */
+    display: inline-block; /* Needed to add space between the bullet and the text */
+    width: 1em; /* Also needed for space (tweak if needed) */
+   /* margin-left: 1em; /* Also needed for space (tweak if needed) */
+  }
+
+  .Space{
+    /* background-color: rosybrown; */
+    height: 15%;
+    width: 100%;
+    margin: 0;
+    position: absolute; 
+  }
+  .Copyright{
+    right:50%;
+    }
+
+    
