--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-.FirstPageBr{
+/* .FirstPageBr{
   cursor:pointer;
   color:black;
   position: absolute  ; 
@@ -17,21 +17,55 @@
   left: 35%;
   transform: translate(-35%, -40%);
   width: fit-content ;
-
-}
-.galsImg{
+} */
+/* .galsImg{
   position: absolute  ; 
   opacity: 0.44;
   cursor:pointer;
-
 }
 .galsImgMb{
   position: absolute  ; 
   opacity: 0.7;
   left: 30%;
   cursor:pointer;
- 
+} */
+
+@media (max-width: 768px) {
+  .FirstPage{
+    cursor:pointer;
+    color:black;
+    position: absolute  ; 
+    top: 40%;
+    left: 35%;
+    transform: translate(-35%, -40%);
+    width: fit-content ;
+  }
+  .galsImg{
+    position: absolute  ; 
+    opacity: 0.7;
+    left: 30%;
+    cursor:pointer;
+  }
 }
+@media (min-width: 769px) {
+  .FirstPage{
+    cursor:pointer;
+    color:black;
+    position: absolute  ; 
+    top:30%;
+    left: 40%;
+    transform: translate(-30%, -30%);
+    width: fit-content ;
+    align-items: center;
+  }
+  .galsImg{
+    position: absolute  ; 
+    opacity: 0.44;
+    cursor:pointer;
+  }
+}
+
+/*----------------------------------------------------------------------------------------------------*/
 .menu-item1{
   color:white;
   cursor:pointer;
